--- a/src/style.css
+++ b/src/style.css
@@ -1,97 +1,129 @@
+@import url("https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap");
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  --clr-pmy-ong: #fb7413;
+  --clr-ntl-wt: #ffffff;
+  --clr-ntl-lg: #959eac;
+  --clr-ntl-mg: #7c8798;
+  --clr-ntl-db: hsl(213, 20%, 18%);
+  --clr-ntl-vdb: #121417;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+body,
+html {
   margin: 0;
+  background-color: var(--clr-ntl-vdb);
+  box-sizing: border-box;
+  font-family: "Overpass";
+  font-size: 15px;
+}
+
+.flex-container {
+  height: 100vh;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #3178c6aa);
+  align-items: center;
+  justify-content: center;
 }
 
 .card {
-  padding: 2em;
+  width: 100%;
+  background-color: #212832;
+  padding: 30px;
+  border-radius: 15px;
+  width: calc(375px * 0.7);
 }
 
-.read-the-docs {
-  color: #888;
+.card > h1 {
+  color: var(--clr-ntl-wt);
+  margin: 20px 0;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.card > p {
+  color: var(--clr-ntl-lg);
+  line-height: 25px;
+}
+
+.card > p.center {
+  text-align: justify;
+  text-align-last: center;
+  margin: 0;
+}
+
+p.primary {
+  margin: 0;
+  color: var(--clr-pmy-ong);
+  font-weight: 400;
+}
+
+.outlined {
+  background-color: var(--clr-ntl-db);
+  padding: 5px 10px;
+  margin: 20px 5px 0 5px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card > button {
+  width: 100%;
+  background-color: var(--clr-pmy-ong);
+  color: var(--clr-ntl-wt);
+  border: none;
+  border-radius: 20px;
+  letter-spacing: 3px;
+  padding: 12px;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.card > button:hover {
+  background-color: var(--clr-ntl-wt);
+  color: var(--clr-pmy-ong);
+}
+
+.card-flex-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.star {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--clr-ntl-db);
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+}
+
+.ratings {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0;
+}
+
+.rating {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--clr-ntl-db);
+  line-height: 40px;
+  color: var(--clr-ntl-lg);
+  cursor: pointer;
+  height: 40px;
+  width: 40px;
+  text-align: center;
+  border-radius: 50%;
+}
+
+.rating:hover {
+  background-color: var(--clr-pmy-ong);
+  color: var(--clr-ntl-wt);
+}
+
+.rating.selected {
+  background-color: var(--clr-ntl-mg);
+  color: var(--clr-ntl-wt);
 }
